# Playground

./: .gitignore  README.md
chrome-sandbox-agent/: .gitignore  README.md  agent.py  chrome_sandbox.py  demo.py  sandbox-claude  sandbox_claude.py  sandbox_config.py  test_policies.py  test_tracing.py  verify_real_sandbox.py
chrome-sandbox-agent/extracted/: CMakeLists.txt  test_broker_check.cc  test_ptrace_debug.c  test_quick.cc
chrome-sandbox-agent/extracted/base_shims/: standalone_compat.h
chrome-sandbox-agent/extracted/base_shims/base/: at_exit.h  bits.h  check.h  check_op.h  clang_profiling_buildflags.h  command_line.h  compiler_specific.h  environment.h  feature_list.h  features.h  lazy_instance.h  location.h  logging.h  notreached.h  path_service.h  pickle.h  run_loop.h  sanitizer_buildflags.h
chrome-sandbox-agent/extracted/base_shims/base/allocator/: partition_alloc_features.h
chrome-sandbox-agent/extracted/base_shims/base/android/: android_info.h  background_thread_pool_field_trial.h
chrome-sandbox-agent/extracted/base_shims/base/containers/: adapters.h  auto_spanification_helper.h  flat_map.h  flat_set.h  span.h
chrome-sandbox-agent/extracted/base_shims/base/debug/: crash_logging.h  dump_without_crashing.h  leak_annotations.h
chrome-sandbox-agent/extracted/base_shims/base/files/: file.h  file_enumerator.h  file_path.h  file_path_watcher.h  file_path_watcher_inotify.h  file_util.h  scoped_file.h  scoped_temp_dir.h
chrome-sandbox-agent/extracted/base_shims/base/functional/: bind.h  callback.h  callback_forward.h  callback_helpers.h
chrome-sandbox-agent/extracted/base_shims/base/memory/: page_size.h  ptr_util.h  raw_ptr.h  raw_ptr_exclusion.h  raw_ref.h  raw_span.h
chrome-sandbox-agent/extracted/base_shims/base/numerics/: safe_conversions.h  safe_math.h
chrome-sandbox-agent/extracted/base_shims/base/posix/: eintr_wrapper.h  global_descriptors.h  unix_domain_socket.h
chrome-sandbox-agent/extracted/base_shims/base/process/: launch.h  process.h  process_handle.h  process_metrics.h
chrome-sandbox-agent/extracted/base_shims/base/strings/: cstring_view.h  pattern.h  safe_sprintf.h  string_number_conversions.h  string_util.h  stringprintf.h
chrome-sandbox-agent/extracted/base_shims/base/synchronization/: lock.h  lock_impl.h  synchronization_buildflags.h  waitable_event.h
chrome-sandbox-agent/extracted/base_shims/base/system/: sys_info.h
chrome-sandbox-agent/extracted/base_shims/base/task/: single_thread_task_runner.h  thread_pool.h
chrome-sandbox-agent/extracted/base_shims/base/test/: bind.h  multiprocess_test.h  task_environment.h
chrome-sandbox-agent/extracted/base_shims/base/threading/: platform_thread.h  thread.h
chrome-sandbox-agent/extracted/base_shims/base/time/: time.h
chrome-sandbox-agent/extracted/base_shims/base/types/: fixed_array.h  pass_key.h
chrome-sandbox-agent/extracted/harness/: agent_minimal_test.c  agent_smoke_test.c  claude_sandbox_test.c  python_sandbox_test.c  sandbox_harness.cc  sandbox_harness.h  sandbox_integration_test.cc  sandbox_run.cc
chrome-sandbox-agent/extracted/sandbox/: sandbox_buildflags.h
chrome-sandbox-agent/extracted/sandbox/linux/bpf_dsl/: verifier.cc
chrome-sandbox-agent/extracted/sandbox/linux/integration_tests/: bpf_dsl_seccomp_unittest.cc
chrome-sandbox-agent/extracted/sandbox/linux/services/: thread_helpers_stub.cc
chrome-sandbox-agent/extracted/sandbox/linux/syscall_broker/: broker_channel.cc  broker_client.h  broker_host.h  broker_simple_message.cc  remote_syscall_arg_handler.cc
chrome-sandbox-agent/extracted/sandbox/linux/tests/: test_main.cc  unit_tests.cc
chrome-sandbox-agent/extracted/testing/: multiprocess_func_list.h
chrome-sandbox-agent/sandbox-run-cli/: Cargo.toml  build.rs
chrome-sandbox-agent/sandbox-run-cli/examples/: aider.toml  claude-code.toml  codex.toml  opencode.toml
chrome-sandbox-agent/sandbox-run-cli/src/: config.rs  ffi.rs  main.rs
chrome-sandbox-agent/sandbox-workspace/rust-sysinfo-service/: Cargo.toml
chrome-sandbox-agent/sandbox-workspace/rust-sysinfo-service/src/: lib.rs  main.rs
openclaw-unikernel/: .gitignore  Cargo.toml  Dockerfile  Makefile  linker.ld  proxy.py
openclaw-unikernel/.cargo/: config.toml
openclaw-unikernel/iso/boot/grub/: grub.cfg
openclaw-unikernel/scripts/: build.sh  run-qemu.sh
openclaw-unikernel/src/: main.rs  util.rs
openclaw-unikernel/src/agent/: mod.rs
openclaw-unikernel/src/channels/: cli.rs  discord.rs  email.rs  matrix.rs  mod.rs  slack.rs  telegram.rs  webhook.rs  whatsapp.rs
openclaw-unikernel/src/config/: mod.rs
openclaw-unikernel/src/cron/: mod.rs
openclaw-unikernel/src/daemon/: mod.rs
openclaw-unikernel/src/doctor/: mod.rs
openclaw-unikernel/src/gateway/: mod.rs
openclaw-unikernel/src/heartbeat/: mod.rs
openclaw-unikernel/src/identity/: mod.rs
openclaw-unikernel/src/integrations/: mod.rs
openclaw-unikernel/src/kernel/: console.rs  mod.rs
openclaw-unikernel/src/kernel/boot/: entry.rs  gdt.rs  mod.rs  paging.rs
openclaw-unikernel/src/kernel/mm/: mod.rs
openclaw-unikernel/src/kernel/sched/: mod.rs
openclaw-unikernel/src/kernel/sync/: mod.rs
openclaw-unikernel/src/kernel/syscall/: mod.rs
openclaw-unikernel/src/memory/: chunker.rs  embeddings.rs  hygiene.rs  mod.rs
openclaw-unikernel/src/migration/: mod.rs
openclaw-unikernel/src/net/: dns.rs  http.rs  mod.rs  tcp.rs  tls.rs  virtio.rs
openclaw-unikernel/src/observability/: mod.rs
openclaw-unikernel/src/onboard/: mod.rs
openclaw-unikernel/src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  resilient.rs
openclaw-unikernel/src/security/: mod.rs  pairing.rs  policy.rs  secrets.rs
openclaw-unikernel/src/skills/: git_sync.rs  mod.rs
openclaw-unikernel/src/tools/: browser.rs  composio.rs  file_ops.rs  memory_tools.rs  mod.rs  shell.rs
openclaw-unikernel/src/tunnel/: mod.rs
openclaw-unikernel/tests/: boot_test.sh
rust-service-sandbox/: Cargo.toml  run_claude.sh
rust-service-sandbox/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  middleware.rs  models.rs
(+130 files in other folders)
