[package]
name = "sandbox-run"
version = "0.1.0"
edition = "2021"
description = "Run any command inside Chrome's seccomp-BPF sandbox"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[build-dependencies]
cc = "1"

[profile.release]
strip = true
lto = true
opt-level = "s"
panic = "abort"
