[package]
name = "sysinfo-service"
version = "0.1.0"
edition = "2021"
description = "OS system information service - reads /proc and /sys for system metrics"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
